syntax = "proto3";

package pb;

service Cache {
	rpc Set(SetReq) returns (SetResp) {}
	rpc Get(GetReq) returns (GetResp) {}
}

message SetReq {
	string key = 1;
	bytes val = 2;
}

message SetResp {}

message GetReq {
	string key = 1;
}

message GetResp {
	bytes val = 1;
}
